logs/Slang/generic/struct/struct_test_0.sv.log
name: struct_test_0
description: Test
should_fail: 0
tags: 7.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/struct/struct_test_0.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/struct/struct_test_0.sv:7:16: error: forward typedef 'mystruct_fwd' does not resolve to a data type
typedef struct mystruct_fwd;
               ^
